--- a/Sisan/Sisan.csproj
+++ b/Sisan/Sisan.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Form10_experts_edit.Designer.cs">
       <DependentUpon>Form10_experts_edit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form11_rang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form11_rang.designer.cs">
+      <DependentUpon>Form11_rang.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form10_experts_edit.resx">
       <DependentUpon>Form10_experts_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form11_rang.resx">
+      <DependentUpon>Form11_rang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
